--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  background-color: #141414;
+  background-color: #141414 !important;
   height: 100%;
   width: 100%;
   overflow: hidden;
